Adiciona gerenciamento de banco de dados SQLite e novas páginas
Implementa a classe SQLiteDatabaseHelper para gerenciar a conexão e operações com o banco de dados SQLite. Atualiza a classe App para inicializar a página principal como ListaProduto.

Modifica a interface da ListaProduto, alterando seu título e adicionando itens de barra de ferramentas. Implementa navegação para a página NovoProduto e adiciona campos de entrada para descrição, quantidade e preço unitário.

Adiciona funcionalidade para salvar novos produtos no banco de dados e exibir mensagens de alerta em caso de erro.

--- a/MauiAppMinhasCompras/MauiAppMinhasCompras.csproj
+++ b/MauiAppMinhasCompras/MauiAppMinhasCompras.csproj
@@ -66,6 +66,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\MainPage1.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\EditarProduto.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
